# pixelpay-miner

./: Cargo.toml  README.md  go.mod  go.sum
cmd/: main.go
core/: balance.go  wallet.go
mine/: pool.go  solo.go
src/: block.rs  main.rs  solo.rs  tx.rs
utils/: validate.go
