[package]
name = "pixelpay-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["tokio-rustls", "serde_json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
